--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educard.boundaries.LoginPage">
+    tools:context="com.byteforce_crew.educard.boundaries.LoginPage">
 
     <EditText
         android:id="@+id/etUsername"
